Fix beer table alignment

--- a/_sass/_beer_table.scss
+++ b/_sass/_beer_table.scss
@@ -5,6 +5,7 @@
     margin-right: 10px;
     font-size: 25px;
     margin-bottom: 10px;
+    clear: both;
   }
 
   .seperator {
